objects/ASI_MFM_A_and_P_Actual__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_A_C_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A/C Code</label>
        <referenceTo>ASI_MFM_A_C_Code__c</referenceTo>
        <relationshipLabel>A and P Actuals</relationshipLabel>
        <relationshipName>A_and_P_Actuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Address_Number__c</fullName>
        <label>Address Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Batch_Number__c</fullName>
        <label>Batch Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Batch_Type__c</fullName>
        <label>Batch Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Document_Number__c</fullName>
        <label>Document Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>P0</fullName>
                </value>
                <value>
                    <fullName>P1</fullName>
                </value>
                <value>
                    <fullName>P6</fullName>
                </value>
                <value>
                    <fullName>P9</fullName>
                </value>
                <value>
                    <fullName>R3</fullName>
                </value>
                <value>
                    <fullName>OV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Explanation_Alpha_Name__c</fullName>
        <label>Explanation Alpha Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Explanation_Remark__c</fullName>
        <label>Explanation Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_G_L_Date__c</fullName>
        <label>G/L Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_LT__c</fullName>
        <label>LT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Phase__c</fullName>
        <label>Phase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Reason__c</fullName>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Reference_2__c</fullName>
        <label>Reference 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_Brand_Code__c</fullName>
        <label>Sub-brand Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_Ledger__c</fullName>
        <label>Sub Ledger</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_brand_Type__c</fullName>
        <label>Sub-brand Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>A and P Actuals</relationshipLabel>
        <relationshipName>A_and_P_Actuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_User_ID__c</fullName>
        <label>User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asi_mfm_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>A and P Actual</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_G_L_Date__c</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_Address_Number__c</columns>
        <columns>ASI_MFM_Amount__c</columns>
        <columns>ASI_MFM_Batch_Number__c</columns>
        <columns>ASI_MFM_Batch_Type__c</columns>
        <columns>ASI_MFM_Business_Unit__c</columns>
        <columns>ASI_MFM_Currency__c</columns>
        <columns>ASI_MFM_Document_Number__c</columns>
        <columns>ASI_MFM_Document_Type__c</columns>
        <columns>ASI_MFM_Reference_2__c</columns>
        <columns>ASI_MFM_Phase__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_MFM_Document_Number__c</field>
            <operation>equals</operation>
            <value>13632968</value>
        </filters>
        <label>test</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>JP</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_Address_Number__c</columns>
        <columns>ASI_MFM_Amount__c</columns>
        <columns>ASI_MFM_Sub_brand__c</columns>
        <columns>ASI_MFM_Currency__c</columns>
        <columns>ASI_MFM_Document_Number__c</columns>
        <columns>ASI_MFM_Document_Type__c</columns>
        <columns>ASI_MFM_Reference_2__c</columns>
        <columns>ASI_MFM_Phase__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_A_and_P_Actual__c.ASI_MFM_JP_A_and_P_Actual</value>
        </filters>
        <label>JP</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>JP_DOC</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_MFM_Phase__c</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_Sub_brand__c</columns>
        <columns>ASI_MFM_Amount__c</columns>
        <columns>ASI_MFM_Reference_2__c</columns>
        <columns>ASI_MFM_G_L_Date__c</columns>
        <columns>ASI_MFM_Address_Number__c</columns>
        <columns>ASI_MFM_Document_Type__c</columns>
        <columns>ASI_MFM_Document_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_MFM_Document_Number__c</field>
            <operation>equals</operation>
            <value>13632968</value>
        </filters>
        <filters>
            <field>ASI_MFM_Document_Type__c</field>
            <operation>equals</operation>
            <value>R3</value>
        </filters>
        <label>JP DOC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>JP_FY1516_JP999999</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Phase__c</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_Sub_brand__c</columns>
        <columns>ASI_MFM_Amount__c</columns>
        <columns>ASI_MFM_Reference_2__c</columns>
        <columns>ASI_MFM_G_L_Date__c</columns>
        <columns>ASI_MFM_Address_Number__c</columns>
        <columns>ASI_MFM_Document_Type__c</columns>
        <columns>ASI_MFM_Document_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_A_and_P_Actual__c.ASI_MFM_JP_A_and_P_Actual</value>
        </filters>
        <filters>
            <field>ASI_MFM_G_L_Date__c</field>
            <operation>lessThan</operation>
            <value>6/30/2016</value>
        </filters>
        <filters>
            <field>ASI_MFM_Reference_2__c</field>
            <operation>equals</operation>
            <value>JP999999</value>
        </filters>
        <filters>
            <field>ASI_MFM_LT__c</field>
            <operation>equals</operation>
            <value>AA</value>
        </filters>
        <label>JP FY1516 JP999999</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>JP_FY1516_JP999999_1110</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_MFM_Phase__c</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_Sub_brand__c</columns>
        <columns>ASI_MFM_Amount__c</columns>
        <columns>ASI_MFM_Reference_2__c</columns>
        <columns>ASI_MFM_G_L_Date__c</columns>
        <columns>ASI_MFM_Address_Number__c</columns>
        <columns>ASI_MFM_Document_Type__c</columns>
        <columns>ASI_MFM_Document_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_A_and_P_Actual__c.ASI_MFM_JP_A_and_P_Actual</value>
        </filters>
        <filters>
            <field>ASI_MFM_G_L_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>6/30/2016</value>
        </filters>
        <filters>
            <field>ASI_MFM_Reference_2__c</field>
            <operation>equals</operation>
            <value>JP999999</value>
        </filters>
        <filters>
            <field>ASI_MFM_Address_Number__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ASI_MFM_Sub_brand__c</field>
            <operation>contains</operation>
            <value>ATY,ATS</value>
        </filters>
        <filters>
            <field>ASI_MFM_LT__c</field>
            <operation>equals</operation>
            <value>AA</value>
        </filters>
        <label>JP FY1516 JP999999 1110</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>JP_FY1516_JP999999_11101</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Phase__c</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_Sub_brand__c</columns>
        <columns>ASI_MFM_Amount__c</columns>
        <columns>ASI_MFM_Reference_2__c</columns>
        <columns>ASI_MFM_G_L_Date__c</columns>
        <columns>ASI_MFM_Address_Number__c</columns>
        <columns>ASI_MFM_Document_Type__c</columns>
        <columns>ASI_MFM_Document_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_A_and_P_Actual__c.ASI_MFM_JP_A_and_P_Actual</value>
        </filters>
        <filters>
            <field>ASI_MFM_G_L_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>6/30/2016</value>
        </filters>
        <filters>
            <field>ASI_MFM_Phase__c</field>
            <operation>equals</operation>
            <value>1570</value>
        </filters>
        <filters>
            <field>ASI_MFM_Sub_brand__c</field>
            <operation>contains</operation>
            <value>ATY,ATS</value>
        </filters>
        <filters>
            <field>ASI_MFM_LT__c</field>
            <operation>equals</operation>
            <value>AA</value>
        </filters>
        <label>JP FY1516 all 1110</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>JP_FY1516_JP999999_11102</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_MFM_Phase__c</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_Sub_brand__c</columns>
        <columns>ASI_MFM_Amount__c</columns>
        <columns>ASI_MFM_Reference_2__c</columns>
        <columns>ASI_MFM_G_L_Date__c</columns>
        <columns>ASI_MFM_Address_Number__c</columns>
        <columns>ASI_MFM_Document_Type__c</columns>
        <columns>ASI_MFM_Document_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_A_and_P_Actual__c.ASI_MFM_JP_A_and_P_Actual</value>
        </filters>
        <filters>
            <field>ASI_MFM_G_L_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>6/30/2017</value>
        </filters>
        <filters>
            <field>ASI_MFM_Phase__c</field>
            <operation>equals</operation>
            <value>9017</value>
        </filters>
        <label>JP JP999999 9017</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>JP_FY1516_SFDC</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_MFM_Phase__c</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_Sub_brand__c</columns>
        <columns>ASI_MFM_Amount__c</columns>
        <columns>ASI_MFM_Reference_2__c</columns>
        <columns>ASI_MFM_G_L_Date__c</columns>
        <columns>ASI_MFM_Address_Number__c</columns>
        <columns>ASI_MFM_Document_Type__c</columns>
        <columns>ASI_MFM_Document_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_A_and_P_Actual__c.ASI_MFM_JP_A_and_P_Actual</value>
        </filters>
        <filters>
            <field>ASI_MFM_G_L_Date__c</field>
            <operation>lessThan</operation>
            <value>6/30/2016</value>
        </filters>
        <filters>
            <field>ASI_MFM_Amount__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ASI_MFM_Address_Number__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ASI_MFM_LT__c</field>
            <operation>equals</operation>
            <value>AA</value>
        </filters>
        <label>JP FY1516 SFDC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>JP_FY1516_VAP</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Phase__c</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_Sub_brand__c</columns>
        <columns>ASI_MFM_Amount__c</columns>
        <columns>ASI_MFM_Reference_2__c</columns>
        <columns>ASI_MFM_G_L_Date__c</columns>
        <columns>ASI_MFM_Address_Number__c</columns>
        <columns>ASI_MFM_Document_Type__c</columns>
        <columns>ASI_MFM_Document_Number__c</columns>
        <columns>ASI_MFM_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_A_and_P_Actual__c.ASI_MFM_JP_A_and_P_Actual</value>
        </filters>
        <filters>
            <field>ASI_MFM_G_L_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>6/30/2016</value>
        </filters>
        <filters>
            <field>ASI_MFM_Reference_2__c</field>
            <operation>equals</operation>
            <value>JP999999</value>
        </filters>
        <filters>
            <field>ASI_MFM_A_C_Code__c</field>
            <operation>equals</operation>
            <value>5725.000 VAP</value>
        </filters>
        <filters>
            <field>ASI_MFM_LT__c</field>
            <operation>equals</operation>
            <value>AA</value>
        </filters>
        <label>JP FY1516 VAP</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>JP_FY1516_all_1500</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_MFM_Phase__c</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_Amount__c</columns>
        <columns>ASI_MFM_Reference_2__c</columns>
        <columns>ASI_MFM_Address_Number__c</columns>
        <columns>ASI_MFM_Sub_brand__c</columns>
        <columns>ASI_MFM_Document_Type__c</columns>
        <columns>ASI_MFM_G_L_Date__c</columns>
        <columns>ASI_MFM_Document_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_A_and_P_Actual__c.ASI_MFM_JP_A_and_P_Actual</value>
        </filters>
        <filters>
            <field>ASI_MFM_G_L_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>6/30/2016</value>
        </filters>
        <filters>
            <field>ASI_MFM_Phase__c</field>
            <operation>equals</operation>
            <value>1640</value>
        </filters>
        <filters>
            <field>ASI_MFM_Sub_brand__c</field>
            <operation>contains</operation>
            <value>CRS</value>
        </filters>
        <filters>
            <field>ASI_MFM_LT__c</field>
            <operation>equals</operation>
            <value>AA</value>
        </filters>
        <filters>
            <field>ASI_MFM_Address_Number__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>JP FY1516 all 1640</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>JP_FY1516_all_P0</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Phase__c</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_Sub_brand__c</columns>
        <columns>ASI_MFM_Amount__c</columns>
        <columns>ASI_MFM_Reference_2__c</columns>
        <columns>ASI_MFM_G_L_Date__c</columns>
        <columns>ASI_MFM_Address_Number__c</columns>
        <columns>ASI_MFM_Document_Type__c</columns>
        <columns>ASI_MFM_Document_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_A_and_P_Actual__c.ASI_MFM_JP_A_and_P_Actual</value>
        </filters>
        <filters>
            <field>ASI_MFM_G_L_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>6/30/2016</value>
        </filters>
        <filters>
            <field>ASI_MFM_Document_Type__c</field>
            <operation>equals</operation>
            <value>P0</value>
        </filters>
        <filters>
            <field>ASI_MFM_Sub_brand__c</field>
            <operation>contains</operation>
            <value>ATY,ATS</value>
        </filters>
        <filters>
            <field>ASI_MFM_LT__c</field>
            <operation>equals</operation>
            <value>AA</value>
        </filters>
        <label>JP FY1516 all P0</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>JP_FY1516_all_P9</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Phase__c</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_Sub_brand__c</columns>
        <columns>ASI_MFM_Amount__c</columns>
        <columns>ASI_MFM_Reference_2__c</columns>
        <columns>ASI_MFM_G_L_Date__c</columns>
        <columns>ASI_MFM_Address_Number__c</columns>
        <columns>ASI_MFM_Document_Type__c</columns>
        <columns>ASI_MFM_Document_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_A_and_P_Actual__c.ASI_MFM_JP_A_and_P_Actual</value>
        </filters>
        <filters>
            <field>ASI_MFM_G_L_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>6/30/2016</value>
        </filters>
        <filters>
            <field>ASI_MFM_Document_Type__c</field>
            <operation>equals</operation>
            <value>P9</value>
        </filters>
        <filters>
            <field>ASI_MFM_Sub_brand__c</field>
            <operation>contains</operation>
            <value>CRS</value>
        </filters>
        <filters>
            <field>ASI_MFM_LT__c</field>
            <operation>equals</operation>
            <value>AA</value>
        </filters>
        <label>JP FY1516 all P9</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>JP_FY1516_all_R3</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Phase__c</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_Sub_brand__c</columns>
        <columns>ASI_MFM_Amount__c</columns>
        <columns>ASI_MFM_Reference_2__c</columns>
        <columns>ASI_MFM_G_L_Date__c</columns>
        <columns>ASI_MFM_Address_Number__c</columns>
        <columns>ASI_MFM_Document_Type__c</columns>
        <columns>ASI_MFM_Document_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_A_and_P_Actual__c.ASI_MFM_JP_A_and_P_Actual</value>
        </filters>
        <filters>
            <field>ASI_MFM_G_L_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>6/30/2016</value>
        </filters>
        <filters>
            <field>ASI_MFM_Document_Type__c</field>
            <operation>equals</operation>
            <value>R3</value>
        </filters>
        <filters>
            <field>ASI_MFM_Sub_brand__c</field>
            <operation>contains</operation>
            <value>ATY,ATS</value>
        </filters>
        <filters>
            <field>ASI_MFM_LT__c</field>
            <operation>equals</operation>
            <value>AA</value>
        </filters>
        <label>JP FY1516 all R3</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>JP_FY1617_PJS</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_MFM_Phase__c</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_Sub_brand__c</columns>
        <columns>ASI_MFM_Amount__c</columns>
        <columns>ASI_MFM_Reference_2__c</columns>
        <columns>ASI_MFM_G_L_Date__c</columns>
        <columns>ASI_MFM_Address_Number__c</columns>
        <columns>ASI_MFM_Document_Type__c</columns>
        <columns>ASI_MFM_Document_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_A_and_P_Actual__c.ASI_MFM_JP_A_and_P_Actual</value>
        </filters>
        <filters>
            <field>ASI_MFM_G_L_Date__c</field>
            <operation>lessThan</operation>
            <value>12/31/2016</value>
        </filters>
        <filters>
            <field>ASI_MFM_Amount__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ASI_MFM_Sub_Brand_Code__c</field>
            <operation>equals</operation>
            <value>PJS</value>
        </filters>
        <filters>
            <field>ASI_MFM_LT__c</field>
            <operation>equals</operation>
            <value>AA</value>
        </filters>
        <filters>
            <field>ASI_MFM_Phase__c</field>
            <operation>equals</operation>
            <value>9001</value>
        </filters>
        <label>JP FY1617 PJS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SEARCH</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Sub_Brand_Code__c</columns>
        <columns>ASI_MFM_G_L_Date__c</columns>
        <columns>ASI_MFM_Phase__c</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_Amount__c</columns>
        <columns>ASI_MFM_Currency__c</columns>
        <columns>ASI_MFM_Address_Number__c</columns>
        <columns>ASI_MFM_Document_Number__c</columns>
        <columns>ASI_MFM_Document_Type__c</columns>
        <columns>ASI_MFM_Reference_2__c</columns>
        <columns>ASI_MFM_Batch_Type__c</columns>
        <columns>ASI_MFM_Batch_Number__c</columns>
        <columns>ASI_MFM_Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_MFM_Sub_Brand_Code__c</field>
            <operation>startsWith</operation>
            <value>PJ</value>
        </filters>
        <filters>
            <field>ASI_MFM_Reference_2__c</field>
            <operation>notEqual</operation>
            <value>J9999999</value>
        </filters>
        <label>SEARCH</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>A and P Actual Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>A and P Actuals</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_JP_A_and_P_Actual</fullName>
        <active>true</active>
        <label>A and P Actual</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>